+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changed in ATK 6.1
------------------
+ Added select method to atkNode which returns an instance of the
  atkSelector class which can be used to fluently build a selectDb
  expression to retrieve a single row, all rows or the row count.
  (PHP5 only!) [Peter]
+ Added feature that skips the addOrCopyDialog when there is no record
  to copy from. The add link will go directly to the add page instead.[Edgar]
+ Added support for usage of custom templates in the admin actions. [Ruud]
+ Added generic Ajax DHTML dialog support to ATK (see atkDialog). [Peter]
+ Added support for add dialogs. If you set the NF_ADD_DIALOG on a node you
  will be presented with a DHTML popup dialog for entering a new record
  instead of a separate page. Can also be used for atkOneToManyRelations and
  replaces the AF_ONETOMANY_EMBED functionality. Works automatically if the
  NF_ADD_DIALOG flag is set on the destination node but can also be enabled
  using the AF_ONETOMANY_ADD_DIALOG flag. Please note that this functionality
  should only be used for simple nodes with only a few attributes and no tabs
  or sections. [Dennis,Patrick,Peter]
+ Added support for "add or copy" dialogs. This special type of dialog makes it
  possible for the user to select whatever he/she want to create a new
  record or copy an existing record. The user is presented with a dropdown of
  records to select from and can also select nested atkOneToManyRelations that
  need to be included in the copy process (or not). This functionality can
  be enabled by setting the NF_ADDORCOPY_DIALOG flag on the node or by
  specifying it using the AF_ONETOMANY_ADDORCOPY_DIALOG flag on an
  atkOneToManyRelation. [Dennis,Patrick,Peter,Tjeerd]
+ Added atkExtendableShuttleRelation; a shuttle relation which can be extended