@@ -38,3 +38,23 @@ TABLE.recordlist .row2
   background-color: #eeeeee;
 }
 
+table.recordlist tbody.groupheader th.firstcol
+{
+  background-image: url(../../../images/plus.gif);;
+}
+
+table.recordlist tbody.groupheader_expanded th.firstcol
+{
+  background-image: url(../../../images/minus.gif);;
+}
+
+table.recordlist tbody.groupheader th,
+table.recordlist tbody.groupheader_expanded th
+{
+  background-color: #888888;
+  color: #ffffff; 
+  cursor: pointer;
+  background-position: 5px 50%;
+  background-repeat: no-repeat;
+  padding-left: 22px !important
+}
